ajout media query  mobile + fixed css a bit

--- a/pages/equipes.html
+++ b/pages/equipes.html
@@ -19,17 +19,14 @@
             <h2>Classement top 3</h2>
             <img id="esl" src="../medias/ESL_One_powered_by_intel_logo.svg">  
         </div>
-       
     </section>
-
-    <section >
-        <div id="rankEquipe">
+        <section id="rankEquipe">
             <div class="rectangle"></div>
             <div class="rectangle"></div>
             <div class="rectangle"></div>
             <div class="rectangle"></div>
-        </div>
-    </section>
+        </section>
+   
     
 </body>
 </html>
