--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TP3-3C1</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styleIndex.css">
 </head>
 <body>
-  
+  <div id="barreNav">
+    <header>
+      <nav>
+        <ul>
+          <li class="subNav"></li>
+            <a>Joeurs et Équipes</a>
+            <div class="subCategories">
+              <a href="">Meilleures Joeurs</a>
+              <a href="">Meilleures Équipes</a>
+            </div>
+          <li class="subNav">Match et tournois</li>
+          <li>Statistiques</li>
+          <li class="subNav">Devenir meilleur</li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 </body>
 </html>
