--- a/pages/equipes.html
+++ b/pages/equipes.html
@@ -21,10 +21,22 @@
         </div>
     </section>
         <section id="rankEquipe">
-            <div class="rectangle"></div>
-            <div class="rectangle"></div>
-            <div class="rectangle"></div>
-            <div class="rectangle"></div>
+            <div class="rectangleE">
+                <img id="equipe" src="../medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="">
+                <h2 class="hoverNomEquipe">VITALITY</h2>            
+            </div>
+            <div class="rectangleE">
+                <img id="equipe" src="../medias/Teams/600px-Heroic_2023_allmode.png" alt="">
+                <h2 class="hoverNomEquipe">HEROIC</h2>
+        </div>
+            <div class="rectangleE">
+                <img id="equipe" src="../medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="">
+                <h2 class="hoverNomEquipe">CLOUD 9</h2>
+            </div>
+            <div class="rectangleE">
+                <img id="equipe" src="../medias/Teams/600px-G2_Esports_2019_darkmode.png" alt="">
+                <h2 class="hoverNomEquipe">G2 ESPORTS</h2>
+            </div>
         </section>
    
     
