page equipe add

--- a/pages/equipes.html
+++ b/pages/equipes.html
@@ -12,7 +12,11 @@
         <div class="logoTitre">
             <img id="logo" src="../medias/logos/Counter-Strike_2-logo.png" alt="logoSite">
         </div>
-        <nav></nav>     
+        <nav class="navbar">
+            <a href="#home" class="active">Accueil</a>
+            <a href="#about">Apropos</a>
+            <a href="#contact">Contact</a>
+        </nav>     
     </header>
     <section>
         <div class="rectangle">
@@ -39,6 +43,8 @@
             </div>
         </section>
    
-    
+    <footer>
+        
+    </footer>
 </body>
 </html>
