--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
         <a href="index.html"><img src="medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpedia" ></a>
       </div>
     </header>
+    <main>
+      <img src="medias/logos/Counter-Strike_2-logo.png" alt="CS2" class="imageTitre">
+      <section class="conteneurMatchs">
+        <div class="matchsFutures">
+           <h4>Decembre 11</h4>
+           <div>
+             <img src="medias/Teams/600px-Heroic_2023.png" alt="Heroic">
+             <p>HEROIC</p>
+           </div>
+           <div>
+             <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
+             <p>500</p>
+           </div>
+           <h4>12hr</h4>
+        </div>
+      </section>
+    </main>
 </body>
 <script src="js/barre-nav.js"></script>
 </html>
