--- a/pages/pageEquipe.html
+++ b/pages/pageEquipe.html
@@ -3,16 +3,60 @@
 <head>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/stylePageEquipe.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>equipe</title>
 </head>
 <body>
     <header>
-        <h2>Information d'équipe</h2>
-    </header>
-    <nav></nav>
+        <input type="checkbox" id="cc-nav">
+        <div class="barre-nav">
+          <label for="cc-nav" class="btn-burguer-nav">
+            <span class="material-symbols-outlined" id="icone-burguer">menu</span>
+            <span class="material-symbols-outlined " id="icone-fermer">keyboard_backspace</span>
+          </label>
+          <nav class="nav-principale">
+            <ul>
+              <li>Joeurs/Équipes <span class="material-symbols-outlined" id="fleche">
+                expand_more
+                </span>
+                <ul>
+                  <li><a href="equipes.html">Les meilleures équipes</a></li>
+                  <li><a href="#">Les meilleures joueurs</a></li>
+                </ul>
+              </li>
+              <li>Matchs et tournois<span class="material-symbols-outlined" id="fleche">
+                expand_more
+                </span>
+                <ul>
+                  <li><a href="#">En direct</a></li>
+                  <li><a href="#">Résultats</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Statistiques</a></li>
+              <li>Devenir meilleur<span class="material-symbols-outlined" id="fleche">
+                expand_more
+                </span>
+                <ul>
+                  <li><a href="#">Tout sur le jeu</a></li>
+                  <li><a href="#">Tout sur les pros</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+          <a href="index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpedia" ></a>
+        </div>
+      </header>
+    <div id="joueur">
+        <img id="joueurs" src="../medias/joueur/no-team-flamez-photo.avif" alt="flamez">
+        <img id="joueurs" src="../medias/joueur/no-team-magisk-photo.avif" alt="magisk">
+        <img id="joueurs" src="../medias/joueur/no-team-spinx-photo.avif" alt="spinx">
+        <img id="joueurs" src="../medias/joueur/no-team-zywoo-photo.avif" alt="zywoo">
+        <img id="joueurs" src="../medias/joueur/vitality-apex-photo.avif" alt="apex">
+    </div>
     <section class="infoMatch">
+       
         <div class="tableauMatch"></div>
     </section>
 
