JS en fini barre matches

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             <div class="matchsFutures">
                 <h4>Decembre 12</h4>
                   <div>
-                    <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="Heroic">
+                    <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="C9">
                     <p>C9</p>
                 </div>
                 <div>
-                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
+                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="Forze">
                   <p>FORZE</p>
                 </div>
                 <h4>13hr</h4>
@@ -82,14 +82,74 @@
             <div class="matchsFutures">
             <h4>Decembre 13</h4>
             <div>
-              <img src="medias/Teams/Team_Spirit_2022_lightmode.png" alt="Heroic">
+              <img src="medias/Teams/Team_Spirit_2022_lightmode.png" alt="SPIRIT">
               <p>SPIRIT</p>
             </div>
             <div>
-              <img src="medias/Teams/600px-Aurora_Gaming_2023_allmode.png" alt="500">
+              <img src="medias/Teams/600px-Aurora_Gaming_2023_allmode.png" alt="AURORA">
               <p>AURORA</p>
             </div>
             <h4>14hr</h4>
+            </div>
+            <div class="matchsFutures">
+            <h4>Decembre 14</h4>
+            <div>
+              <img src="medias/Teams/600px-BIG_2020_lightmode.png" alt="big">
+              <p>BIG</p>
+            </div>
+            <div>
+              <img src="medias/Teams/600px-INation_2021_allmode.png" alt="iNATION">
+              <p>iNATION</p>
+            </div>
+            <h4>15hr</h4>
+            </div>
+            <div class="matchsFutures">
+            <h4>Decembre 15</h4>
+            <div>
+              <img src="medias/Teams/600px-ENCE_2020_full_lightmode.png" alt="ENCE">
+              <p>ENCE</p>
+            </div>
+            <div>
+              <img src="medias/Teams/600px-Monte_2022_allmode.png" alt="Monte">
+              <p>MONTE</p>
+            </div>
+            <h4>15hr</h4>
+            </div>
+            <div class="matchsFutures">
+            <h4>Decembre 16</h4>
+            <div>
+              <img src="medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="VIT">
+              <p>VITALITY</p>
+            </div>
+            <div>
+              <img src="medias/Teams/Astralis_logo.svg.png" alt="AST">
+              <p>ASTRALIS</p>
+            </div>
+            <h4>15hr</h4>
+            </div>
+            <div class="matchsFutures">
+            <h4>Decembre 17</h4>
+            <div>
+              <img src="medias/Teams/ninjas-in-pyjamas-logo-0AD2295340-seeklogo.com.png" alt="NIP">
+              <p>NIP</p>
+            </div>
+            <div>
+              <img src="medias/Teams/600px-Eternal_Fire_2022_allmode.png" alt="EF">
+              <p>EF</p>
+            </div>
+            <h4>16hr</h4>
+            </div>
+            <div class="matchsFutures">
+            <h4>Decembre 17</h4>
+            <div>
+              <img src="medias/Teams/600px-9INE_2022_lightmode.png" alt="9ine">
+              <p>9INE</p>
+            </div>
+            <div>
+              <img src="medias/Teams/600px-G2_Esports_2019_darkmode.png" alt="G2">
+              <p>G2</p>
+            </div>
+            <h4>16hr</h4>
             </div>
           </section>
           <span class="material-symbols-outlined" id="flecheFront">
