css du barrenav et js corrige

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TP3-3C1</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styleNAV-Footer.css">
   <link rel="stylesheet" href="css/styleIndex.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -156,7 +157,15 @@
             arrow_forward
             </span>
       </div>
+      <section class="tableauTournoi">
+        <div class="titreTournoi"></div>
+        <div class="boutonsTournoi"></div>
+        <div class="equipesTournoi"></div>
+      </section>
     </main>
+    <footer class="footerPrincipal">
+
+    </footer>
 </body>
 <script src="js/barre-nav.js"></script>
 </html>
