--- a/pages/pageEquipe.html
+++ b/pages/pageEquipe.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/styleNAV-Footer.css">
     <link rel="stylesheet" href="../css/stylePageEquipe.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <meta charset="UTF-8">
@@ -64,4 +65,5 @@
 
 </footer>
 </body>
+<script src="../js/barre-nav.js"></script>
 </html>
