footer fini et tableau matchs

--- a/index.html
+++ b/index.html
@@ -158,9 +158,138 @@
             </span>
       </div>
       <section class="tableauTournoi">
-        <div class="titreTournoi"></div>
-        <div class="boutonsTournoi"></div>
-        <div class="equipesTournoi"></div>
+        <div class="titreTournoi">
+          <h3>BLAST.TV PARIS MAJOR 2023</h3>
+        </div>
+        <div class="boutonsTournoi">
+          <button>Phase de groupe</button>
+          <button>Éliminatoires</button>
+        </div>
+        <div class="equipesTournoi">
+          <div class="phaseGroupes">
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Heroic_2023.png" alt="heroic">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>  
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="heroic">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Heroic_2023.png" alt="heroic">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>  
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="heroic">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Heroic_2023.png" alt="heroic">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>  
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="heroic">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Heroic_2023.png" alt="heroic">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>  
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="heroic">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>
+          <div class="eliminatoires">
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footerPrincipal">
