modification not finished yet

--- a/pages/equipes.html
+++ b/pages/equipes.html
@@ -57,14 +57,16 @@
     </main>
     <section id="logoHeader">
         <div class="rectangle">
-            <h2> top 3 par </h2>
+            <h2> top 10 par </h2>
             <img id="esl" src="../medias/ESL_One_powered_by_intel_logo.svg">  
         </div>
     </section>
         <section id="rankEquipe">
             <div class="rectangleE">
-                <img id="equipe" src="../medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="">
-                <h2 class="hoverNomEquipe"><a href="pageEquipe.html">VITALITY</a></h2>            
+  
+                  <div class="carre"><h2>1</h2></div>
+                    <img id="equipe" src="../medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="">
+                    <h2 class="hoverNomEquipe"><a href="pageEquipe.html">VITALITY</a></h2>                   
             </div>
             <div class="rectangleE">
                 <img id="equipe" src="../medias/Teams/600px-Heroic_2023.png" alt="">
@@ -75,12 +77,6 @@
                 <h2 class="hoverNomEquipe"><a href="pageEquipe.html">CLOUD 9</a></h2>
             </div>
           </section>        
-            <section id="logoHeader">
-              <div class="rectangle">
-                  <h2> top 6 par </h2>
-                  <img id="esl" src="../medias/ESL_One_powered_by_intel_logo.svg">  
-              </div>
-            </section>
             <section id="rankEquipe">
               <div class="rectangleE">
                   <img id="equipe" src="../medias/Teams/600px-BIG_2020_lightmode.png" alt="">
