--- a/pages/pageEquipe.html
+++ b/pages/pageEquipe.html
@@ -59,10 +59,27 @@
     <section class="infoMatch">
         <div class="tableauMatch"></div>
     </section>
-
-<footer>
-
-</footer>
+    <footer class="footerPrincipal">
+      <a href="index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
+      <div id="reseauxSociauxHaut">
+        <img src="../medias/reseauxSociaux/discord.svg" alt="Discord">
+        <img src="../medias/reseauxSociaux/x-twitter.svg" alt="twitter">
+        <img src="../medias/reseauxSociaux/facebook.svg" alt="Facebook">
+        <img src="../medias/reseauxSociaux/instagram.svg" alt="Insta">
+      </div>
+      <div id="reseauxSociauxBas">        
+        <img src="../medias/reseauxSociaux/youtube.svg" alt="youtube">
+        <img src="../medias/reseauxSociaux/twitch.svg" alt="Twitch">
+        <img src="../medias/reseauxSociaux/github.svg" alt="GIT">
+        <img src="../css/" alt="linkedin">
+      </div>
+      <h3>Contactez-Nous</h3>
+      <p>Chat avec nous</p>
+      <h3>À propos de</h3>
+      <p>Politique de confidentialité</p>
+      <p>API</p>
+      <p>Avertissement</p>
+    </footer>
 </body>
 <script src="../js/barre-nav.js"></script>
 </html>
