Tableau match fini

--- a/index.html
+++ b/index.html
@@ -172,35 +172,7 @@
                 <div class="equipe">
                   <img src="medias/Teams/600px-Heroic_2023.png" alt="heroic">
                 </div>
-                <div class="equipe">
-                  <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
-                </div>
-              </div>
-            </div>
-            <div class="round">
-              <div class="matchSuivant">
-                <div class="equipe">TBD</div>
-              </div>
-            </div>  
-            <div class="round">
-              <div class="match">
-                <div class="equipe">
-                  <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="heroic">
-                </div>
-                <div class="equipe">
-                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
-                </div>
-              </div>
-            </div>
-            <div class="round">
-              <div class="matchSuivant">
-                <div class="equipe">TBD</div>
-              </div>
-            </div>
-            <div class="round">
-              <div class="match">
-                <div class="equipe">
-                  <img src="medias/Teams/600px-Heroic_2023.png" alt="heroic">
+                <div class="divider">
                 </div>
                 <div class="equipe">
                   <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
@@ -217,6 +189,8 @@
                 <div class="equipe">
                   <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="heroic">
                 </div>
+                <div class="divider">
+                </div>
                 <div class="equipe">
                   <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
                 </div>
@@ -230,10 +204,12 @@
             <div class="round">
               <div class="match">
                 <div class="equipe">
-                  <img src="medias/Teams/600px-Heroic_2023.png" alt="heroic">
+                  <img src="medias/Teams/Team_Spirit_2022_lightmode.png" alt="heroic">
+                </div>
+                <div class="divider">
                 </div>
                 <div class="equipe">
-                  <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
+                  <img src="medias/Teams/600px-Aurora_Gaming_2023_allmode.png" alt="500">
                 </div>
               </div>
             </div>
@@ -245,10 +221,12 @@
             <div class="round">
               <div class="match">
                 <div class="equipe">
-                  <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="heroic">
+                  <img src="medias/Teams/600px-BIG_2020_lightmode.png" alt="heroic">
+                </div>
+                <div class="divider">
                 </div>
                 <div class="equipe">
-                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
+                  <img src="medias/Teams/600px-INation_2021_allmode.png" alt="500">
                 </div>
               </div>
             </div>
@@ -260,10 +238,12 @@
             <div class="round">
               <div class="match">
                 <div class="equipe">
-                  <img src="medias/Teams/600px-Heroic_2023.png" alt="heroic">
+                  <img src="medias/Teams/600px-ENCE_2020_full_lightmode.png" alt="heroic">
+                </div>
+                <div class="divider">
                 </div>
                 <div class="equipe">
-                  <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
+                  <img src="medias/Teams/600px-Monte_2022_allmode.png" alt="500">
                 </div>
               </div>
             </div>
@@ -275,10 +255,46 @@
             <div class="round">
               <div class="match">
                 <div class="equipe">
-                  <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="heroic">
+                  <img src="medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="heroic">
+                </div>
+                <div class="divider">
                 </div>
                 <div class="equipe">
-                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
+                  <img src="medias/Teams/Astralis_logo.svg.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/ninjas-in-pyjamas-logo-0AD2295340-seeklogo.com.png" alt="heroic">
+                </div>
+                <div class="divider">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Eternal_Fire_2022_allmode.png" alt="500">
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>  
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-9INE_2022_lightmode.png" alt="heroic">
+                </div>
+                <div class="divider">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-G2_Esports_2019_darkmode.png" alt="500">
                 </div>
               </div>
             </div>
@@ -290,6 +306,10 @@
           <div class="eliminatoires">
           </div>
         </div>
+        
+      </section>
+      <section class="matchRegionaux">
+
       </section>
     </main>
     <footer class="footerPrincipal">
