tableau matchs a venir

--- a/index.html
+++ b/index.html
@@ -309,7 +309,29 @@
         
       </section>
       <section class="matchRegionaux">
-
+        <div class="titreMatch">
+          <h3>Tous les tournois</h3>
+          <div class="boutonsMatch">
+            <button>Americas</button>
+            <button>EMEA</button>
+            <button>Asia</button>
+            <button>International</button>
+          </div>
+          <div class="matchsGeneral">
+            <div class="titreAvenir">
+              <h3>À venir</h3>
+            </div>
+            <div class="matchBloc">
+              <p>Mar 17 - 31</p><p>PGL Major Copenhagen 2024</p>
+            </div>
+            <div class="matchBloc">
+              <p>Jan 31 - Feb 11</p><p>IEM Katowice 2024</p>
+            </div>
+            <div class="matchBloc">
+              <p>Dec 13 - 17</p><p>BLAST Premier World Final</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footerPrincipal">
