Page index mobile fini

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <button>International</button>
           </div>
           <div class="matchsGeneral">
-            <div class="titreAvenir">
+            <div class="titresInterieurs">
               <h3>À venir</h3>
             </div>
             <div class="matchBloc">
@@ -330,8 +330,51 @@
             <div class="matchBloc">
               <p>Dec 13 - 17</p><p>BLAST Premier World Final</p>
             </div>
+            <div class="titresInterieurs">
+              <h3>Actuel</h3>
+            </div>
+            <div class="matchBloc">
+              <p>Aôut 15 - Dec 10</p><p>ESL Challenger League</p>
+            </div>
+            <div class="titresInterieurs">
+              <h3>Passé</h3>
+            </div>
+            <div class="matchBloc">
+              <p>Oct 5 - Dec 10</p><p>ESL Challenger League</p>
+            </div>
+            <div class="matchBloc">
+              <p>Aôut - Dec 10</p><p>ESL Challenger League</p>
+            </div>
+            <div class="matchBloc">
+              <p>Dec 8 - 10</p><p>ESL Challenger League</p>
+            </div>
           </div>
         </div>
+      </section>
+      <section class="nouvelles">
+        <div class="titreNouvelles">
+          <h3>Nouvelles</h3>
+          <div class="article">
+            <img src="medias/articles/Article1.jpg" alt="article1">
+            <div class="texteArticle">
+              <p>S1mple, le meilleure joeur de l'actualité</p>
+              <p>Article</p>
+            </div>
+          </div>
+          <div class="article">
+            <img src="medias/articles/Article2.jpg" alt="article2">
+            <div class="texteArticle">
+              <p>Quelle est la meilleure équipe de 2023 ?</p>
+              <p>Article</p>
+            </div>
+          </div>
+          <div class="article">
+            <img src="medias/articles/Article3.jpg" alt="article3">
+            <div class="texteArticle">
+              <p>L'opinion de pros sur Counter-Strike 2</p>
+              <p>Article</p>
+            </div>
+          </div>
       </section>
     </main>
     <footer class="footerPrincipal">
