--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <span class="material-symbols-outlined" id="icone-burguer">menu</span>
           <span class="material-symbols-outlined " id="icone-fermer">keyboard_backspace</span>
         </label>
+        <a href="index.html"><img src="medias/logos/liquipedia_logo_v2PC.png" alt="Liquidpedia" class="liquidpedia" ></a>
         <nav class="nav-principale">
           <ul>
             <li>Joeurs/Équipes <span class="material-symbols-outlined" id="fleche">
@@ -46,7 +47,6 @@
             </li>
           </ul>
         </nav>
-        <a href="index.html"><img src="medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpedia" ></a>
       </div>
     </header>
     <main>
@@ -371,7 +371,7 @@
           <div class="article">
             <img src="medias/articles/Article3.jpg" alt="article3">
             <div class="texteArticle">
-              <p>L'opinion de pros sur Counter-Strike 2</p>
+              <p>L'opinion d pros sur Counter-Strike 2</p>
               <p>Article</p>
             </div>
           </div>
