barre nav fixe sur pc

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="index.html"><img src="medias/logos/liquipedia_logo_v2PC.png" alt="Liquidpedia" class="liquidpedia" ></a>
         <nav class="nav-principale">
           <ul>
-            <li>Joeurs/Équipes <span class="material-symbols-outlined" id="fleche">
+            <li>Joueurs/Équipes <span class="material-symbols-outlined" id="fleche">
               expand_more
               </span>
               <ul>
